--- a/src/assets/Product.scss
+++ b/src/assets/Product.scss
@@ -1,9 +1,6 @@
-.product-image-wrapper {
+.card-img-top {
   flex: 0 0 250px;
   overflow: hidden;
-}
-
-.product-image {
   max-height: 100%;
   object-fit: contain;
 }
